[package]
name = "ag-proxy-tools"
version = "0.2.0"
description = "A desktop proxy manager for AI coding assistants, built with Tauri v2"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ag_proxy_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rcgen = "0.13"
dirs = "5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "socks", "http2"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "server", "server-auto"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
url = "2"
http = "1"
http-body-util = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
bytes = "1"
rustls-pemfile = "2"
rfd = "0.15"
futures = "0.3"
open = "5"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
socket2 = "0.5"
